--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
         </div>  
       </div>
        <div class="col-xs-3 key-group">
+        <div class="key">%</div>
         <div class="key">-</div>
-        <div id="plus" class="key">+</div>
+        <div class="key">+</div>
        </div>
     </div>
       <div class="row key-row">
       <div class="col-xs-3 key">.</div>
       <div class="col-xs-3 key">0</div>
-      <div id="equals" class="col-xs-6 key">=</div>
+      <div class="col-xs-3 key">+/-</div>
+      <div class="col-xs-3 key">=</div>
     </div>
   </div>
 </body>
