--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
   <div id="calculator" class="container-fluid vcenter">
-    <div id="result" class="row">6</div>
+    <div id="result" class="row">0</div>
     <div id="preview" class="row"></div>
     <div class="row key-row">
       <div class="col-xs-3 key">AC</div>
-      <div class="col-xs-3 key">X</div>
+      <div class="col-xs-3 key">*</div>
       <div class="col-xs-3 key">/</div>
       <div class="col-xs-3 key">DEL</div>
     </div>
