--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery.hotkeys.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
@@ -44,7 +45,7 @@
       <div class="row key-row">
       <div class="col-xs-3 key">.</div>
       <div class="col-xs-3 key">0</div>
-      <div class="col-xs-3 key">+/-</div>
+      <div class="col-xs-3 key">&#177</div>
       <div class="col-xs-3 key">=</div>
     </div>
   </div>
