--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="calculator" class="container-fluid vcenter">
     <div id="result" class="row">0</div>
     <div id="preview" class="row"></div>
-    <div class="row key-row">
+    <div class="row key-row upper">
       <div id="key-AC" class="col-xs-3 key">AC</div>
       <div id="key-DEL" class="col-xs-3 key">DEL</div>
       <div id="key-DIVISION" class="col-xs-3 key">&divide;</div>
@@ -34,20 +34,26 @@
             <div id="key-1" class="col-xs-4 key">1</div>
             <div id="key-2" class="col-xs-4 key">2</div>
             <div id="key-3" class="col-xs-4 key">3</div>
+            <div class="container-fluid">
+              <div class="row">
+                <div id="key-DOT" class="col-xs-4 key">.</div>
+                <div id="key-0" class="col-xs-8 key">0</div>
+              </div>
+            </div>
           </div>
         </div>  
       </div>
        <div class="col-xs-3 key-group">
         <div id="key-MINUS" class="key">-</div>
         <div id="key-PLUS" class="key">+</div>
-      <div id="key-EQL" id="equals" class="key">=</div>
+      <div id="key-EQL" class="key">=</div>
        </div>
     </div>
-      <div class="row key-row">
-      <div id="key-DOT" class="col-xs-3 key">.</div>
-      <div id="key-0" class="col-xs-6 key">0</div>
+      <!-- <div class="row key-row">
+      <div class="col-xs-3 key">.</div>
+      <div class="col-xs-6 key">0</div>
       <div id="key-name" class="col-xs-3 key">calci</div>
-    </div>
+    </div> --> 
   </div>
 </body>
 </html>
